--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/jpa
 spring.datasource.username=postgres
 spring.datasource.password=sicario2793
 spring.jpa.hibernate.ddl-auto=create-drop
